<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AnimeDetour</string>
    <string name="home_title">Home</string>
    <string name="schedule_title">Schedule</string>
    <string name="event_details_title">Event</string>
    <string name="guests_title">Guests</string>
    <string name="favorites_title">My Events</string>
    <string name="guest_detail_title">Guest Detail</string>
    <string name="maps_title">Map</string>
    <string name="settings_title">Settings</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_home_label">Home</string>
    <string name="drawer_guests_label">Guests</string>
    <string name="drawer_favorites_label">My Events</string>
    <string name="drawer_programming_label">Schedule</string>
    <string name="drawer_maps_label">Hotel Map</string>
    <string name="drawer_settings_label">Settings</string>

    <string name="panel_details">%1$ta, %1$tl:%1$tM%1$tp - %2$tl:%2$tM%2$tp in %3$s</string>
    <string name="panel_details_multiday">%1$ta, %1$tl:%1$tM%1$tp - %2$ta, %2$tl:%2$tM%2$tp in %3$s</string>
    <string name="schedule_day_headline">%tA</string>

    <string name="notification_description">Event is starting soon</string>
    <string name="landing_upcoming_events">Upcoming Events</string>
    <string name="header_content_description">Detour Logo</string>
    <string name="list_empty_title">Nothing to see.</string>
    <string name="schedule_empty_subhead">Events and panels will show here.</string>

    <string name="settings_event_notifications">Event Notifications</string>
    <string name="settings_event_generate_button">Generate</string>
    <string name="settings_event_generate">New upcoming event</string>
    <string name="settings_drop_data_button">Drop</string>
    <string name="settings_drop_data">Local Database</string>
    <string name="settings_application_version">Application version %1$s build %2$s</string>
    <string name="map_control_first_floor">1</string>
    <string name="map_control_second_floor">2</string>
    <string name="map_control_22nd_floor">22</string>
    <string name="map_control_sheraton">S2</string>
    <string name="legal">Copyright © 2014-2015 Anime Twin Cities, Inc. \nAll Rights Reserved. \n\n"Material Design Icons" copyright Google Inc. Licensed under Creative Commons Attribution 4.0</string>
    <string name="settings_fake_slowdown">Fake slow network</string>
    <string name="action_search">Search</string>
    <string name="action_show_past">Show Ended Events</string>
    <string name="event_search_no_results">No results</string>
    <string name="event_search_no_results_description">No events found with that title</string>
    <string name="guest_empty_subhead">Guests will show here.</string>
    <string name="event_age_warning">Parts of this event may be restricted to %s \nYou may be required to show your ID before entering.</string>
    <string name="missing_google_play_services_error_message">Oh no! We can\'t show you this map, since you don\'t have Google Play Services!</string>
    <string name="google_play_services_button_label">Get Google Play Services</string>
    <string name="off_season_headline">Join Us Next Year!</string>
    <string name="atc_link">More Events</string>
    <string name="register_action">Register</string>
</resources>
