<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/default_content"
    android:id="@+id/left_drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:clickable="true"
>
    <TextView
        android:id="@+id/drawer_home"
        style="@style/drawer_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_home_label"
    />
    <TextView
        android:id="@+id/drawer_guests"
        style="@style/drawer_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_guests_label"
    />
    <TextView
        android:id="@+id/drawer_favorites"
        style="@style/drawer_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_favorites_label"
    />
    <TextView
        android:id="@+id/drawer_programming"
        style="@style/drawer_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_programming_label"
    />
    <TextView
        android:id="@+id/drawer_maps"
        style="@style/drawer_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_maps_label"
    />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
    >
        <TextView
            android:id="@+id/drawer_settings"
            style="@style/drawer_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/ic_settings_black_24dp"
            android:drawableStart="@drawable/ic_settings_black_24dp"
            android:text="@string/drawer_settings_label"
        />
    </RelativeLayout>
</LinearLayout>
